[project]
name = "multilingual-rag"
version = "0.1.0"
description = "Multilingual RAG Agent application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.23",
    "langchain[openai]>=0.3.25",
    "langgraph>=0.4.8",
    "pydantic>=2.11.7",
    "pypdf>=5.6.0",
    "streamlit>=1.45.1",
]
